# project_obstacle_flow

./: README.md  affinemap.py  assembling.py  assembling_lifting.py  assembling_lin_sys.py  main.py  p1_bubble_fem.py  pyproject.toml  rectangular_grid.py  reference_element.py  shape_func_4_plot.py  simulation_bdn_penalty.py  solution_visualiser.py  triangulation.py
