[tool.poetry]
name = "project-obstacle-flow"
version = "0.1.0"
description = ""
authors = ["Erik Weilandt <erik.weilandt+git@gmail.com>"]
readme = "README.md"
packages = [{include = "project_obstacle_flow"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12" 
black = "^23.3.0"
numpy = "^1.24.3"
scipy = "^1.10.1"
pandas = "^2.0.1"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
